fix(navbar): add scrollbar

--- a/src/components/Sidebar/styles.module.scss
+++ b/src/components/Sidebar/styles.module.scss
@@ -55,7 +55,29 @@
 }
 
 .sidebarBody {
-  height: calc(100% - 145px);
+  height: calc(100% - 155px);
+  overflow-y: auto;
+  margin-bottom: 10px;
+  margin-right: 3px;
+
+  &::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+
+  &::-webkit-scrollbar {
+    width: 6px;
+    background-color: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: var(--secondary-color);
+
+    &:active, &:hover {
+      background-color: var(--primary-color);
+    }
+  }
 }
 
 .sidebarFooter {
@@ -68,4 +90,8 @@
   a {
     color: var(--primary-color) !important;
   }
+}
+
+.sidebarList {
+  overflow-y: auto;
 }
